# ESP32-p4-Function-EV-Board_Aiot_projection

./: .gitignore  112019017.txt  CMakeLists.txt  ESP32-P4-AIoT-Month-Plan-v2.docx  README.md  TEAM_DIVISION.md  build.ps1  build2.ps1  build_c6_slave.ps1  build_fast.ps1  build_wifi_mac_fix.bat  build_wifi_mac_fix.ps1  cleanup_build.ps1  flash.ps1  flash_monitor.ps1  partitions.csv  plan.txt  plan_extracted.txt  pytest_mipi_isp_dsi.py  run_idf.py  schem.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.old  test_cmd.bat  tmp_reconfigure.bat  tmp_reconfigure.ps1  tmp_reconfigure_out.txt  论文方法评估.docx  论文方法评估2 .docx  论文方法评估2_extracted.txt  论文方法评估_extracted.txt  赛道.txt
.venv_pdf/: pyvenv.cfg
.venv_pdf/Scripts/: activate  activate.bat
components/audio/: CMakeLists.txt  Kconfig  audio.c
components/audio/include/: audio.h
components/camera_capture/: CMakeLists.txt  camera_capture.c
components/camera_capture/include/: camera_capture.h
components/cloud_api/: CMakeLists.txt  Kconfig  cloud_api.c
components/cloud_api/include/: cloud_api.h
components/espressif__esp-dl/vision/image/: dl_image_process.hpp
components/human_detect/: CMakeLists.txt  Kconfig  human_detect.cpp  idf_component.yml
components/human_detect/include/: human_detect.h
components/led_controller/: CMakeLists.txt  Kconfig  led_controller.c
components/led_controller/include/: led_controller.h
components/pir/: CMakeLists.txt  Kconfig  pir.c
components/pir/include/: pir.h
components/sensor_init/: CMakeLists.txt  example_sensor_init.c  idf_component.yml
components/sensor_init/include/: example_sensor_init.h
components/slave_ota/: CMakeLists.txt  flash_slave.cmake  slave_ota.c  slave_ota.h
components/ui/: CMakeLists.txt  Kconfig  README.md  ui_font_custom.c  ui_lvgl.c  ui_manager.c  ui_pages.c
components/ui/include/: ui_lvgl.h  ui_manager.h  ui_pages.h
components/wake_word/: CMakeLists.txt  Kconfig  wake_word.c
components/wake_word/include/: wake_word.h
components/wifi_conn/: CMakeLists.txt  wifi_conn.c
components/wifi_conn/include/: wifi_conn.h
docs/: product_functional_design_v2.md  product_functional_design_v3.md  product_functional_design_v4_paper_method.md  product_functional_design_v5_osnet.md  reid_integration_design.md  reid_task_split_3person.md
main/: CMakeLists.txt  Kconfig.projbuild  example_config.h  idf_component.yml  mipi_isp_dsi_main.c
tools_temp/: gen_ui_font.py  package-lock.json
